<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_sbpl_lattice_planner</name>
  <version>0.3.4</version>
  <description>
    The sbpl_lattice_planner is a global planner plugin for move_base and wraps
    the SBPL search-based planning library.
  </description>
  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author>Michael Phillips</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/sbpl_lattice_planner</url>
  <url type="repository">https://github.com/ros-planning/navigation_experimental.git</url>
  <url type="bugtracker">https://github.com/ros-planning/navigation_experimental/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>  
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_core</depend>
  <depend>pluginlib</depend>
  <depend>nav2_sbpl_lattice_planner_msgs</depend>  
  <depend>sbpl</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/global_planner_plugin.xml"/>
  </export>
</package>
