<?xml version="1.0"?>
<package format="3">
  <name>nav2_sbpl_lattice_planner_msgs</name>
  <version>0.0.3</version>
  <description>This package provides message types that are used by the package mpc_local_planner</description>

  <maintainer email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</maintainer>
  <author email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</author>

  <license>GPLv3</license>

  <url type="website">http://wiki.ros.org/mpc_local_planner_msgs</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

    <test_depend>ament_lint_common</test_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
